<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_pokemon">Butterfree</string>
    <string name="numero_pokemon">#012</string>
    <string name="chipJogo">Jogo</string>
    <string name="chipRegiao">Região</string>
    <string name="chipTipo">Tipo</string>
    <string name="til_busca">Digite aqui</string>
    <string name="telefone">Telefone</string>
    <string name="configura_es">Configurações</string>
    <string name="sair"><u>Sair</u></string>
    <string name="modo_noturno">Modo Noturno</string>
    <string name="alterar_telefone">Alterar Telefone</string>
    <string name="apelido">Apelido</string>
    <string name="alterar_apelido">Alterar Apelido</string>
    <string name="e_mail">E-Mail</string>
    <string name="alterar_e_mail">Alterar E-Mail</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="deseja_realmente_sair">Deseja realmente sair?</string>
    <string name="n_o_sair"><u>Não Sair</u></string>
    <string name="esquecer"><u>Esqueceu a senha?</u> </string>
    <string name="cadastrar"><u>Cadastrar</u></string>
    <string name="login">Login</string>
    <string name="title_activity_spash_screen">SpashScreenActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cadastro">Cadastro</string>
    <string name="login_cadastro"><u>Login</u></string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nomeUsuario">Nome Usuario</string>
    <string name="registrar">REGISTRAR</string>
    <string name="ice">Ice</string>
    <string name="level">Level</string>
    <string name="tm_hm">TM/HM</string>
    <string name="egg">Egg</string>
    <string name="psychic">Psychic</string>
    <string name="flying">Flying</string>
    <string name="fire">Fire</string>
    <string name="weakness">Weakness</string>
    <string name="poison">Poison</string>
    <string name="grass">Grass</string>
    <string name="type">Type</string>
    <string name="via_trade">Via Trade</string>
    <string name="location">Location</string>
    <string name="Overgrow">Overgrow</string>
    <string name="Seed">Seed</string>
    <string name="GenderF">12,25%</string>
    <string name="GenderM">82,75%</string>
    <string name="Classification">Classification</string>
    <string name="Gender">Gender</string>
    <string name="Ability">Ability</string>
    <string name="venosaur">Venosaur</string>
    <string name="ivysaur">Ivysaur</string>
    <string name="Bulbasaur">Bulbasaur</string>
    <string name="Evoluções">Evoluções</string>
    <string name="_002_ivysaur">002 Ivysaur</string>
    <string name="_151_mew">151 Mew</string>
    <string name="todo">todo</string>
    <string name="title_app">PokeDex</string>
    <string name="cod_123456789">Cod 123456789</string>
    <string name="nickname">Nickname</string>
    <string name="ol_xpto">xpto</string>
    <string name="geodude">Geodude</string>
    <string name="graveler">Graveler</string>
    <string name="golem">Golem</string>
    <string name="rock">Rock</string>
    <string name="_075_graveler">075 Graveler</string>
    <string name="_073_tentacruel">073 Tentacruel</string>
    <string name="boulder_badge">Boulder Badge</string>
    <string name="pewter_city">Pewter City</string>
    <string name="gym_leader_brook">Gym Leader Brook</string>
    <string name="region1">Kanto</string>
    <string name="region_2">Johto</string>
    <string name="region_3">Hoenn</string>
    <string name="region_4">Sinnoh</string>
    <string name="region_5">Unova</string>
    <string name="region_6">Kalos</string>
    <string name="region_7">Alola</string>
    <string name="region_8">Galar</string>
    <string name="bug">Bug</string>
    <string name="configuracao">Configuração</string>
    <string name="item">Item</string>
    <string name="region">Região</string>
    <string name="game">Game</string>
    <string name="encounters">Encontros</string>
    <string name="potion">Potion</string>
    <string name="item_description">A spray-type wound medicine. It restores the HP of one Pokémon by 20 points.</string>
    <string name="description">Descrição</string>
    <string name="Water">Water</string>
    <string name="ground">Ground</string>
    <string name="steel">Steel</string>
    <string name="fighter">Figther</string>
    <string name="item_touch_helper_previous_elevation">false</string>
    <string name="_01">01</string>
    <string name="tackle">Tackle</string>
    <string name="pokedex">Pokedex</string>
    <string name="info_tab">Info</string>
    <string name="evolution_tab">Evolution</string>
    <string name="stats_tab">Base Stats</string>
    <string name="moves_tab">Moves</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="lorem_small">Lorem ipsum varius suspendisse primis justo nam curabitur lacinia aenean, commodo ad placerat dictum augue arcu hendrerit a. tristique et aliquam sapien conubia sed lectus semper nec porttitor, est leo mattis praesent aliquet arcu augue semper. consectetur ligula sodales sagittis commodo augue ut donec</string>
    <string name="generation">Generation</string>
    <string name="my_team">My team</string>
    <string name="Move">Moves</string>
</resources>