<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SaidaFragment">



    <ImageView
        android:id="@+id/ivPokebola"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ic_poke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/viewContainer"
        style="@style/Container"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPokebola"
        />

    <TextView
        android:id="@+id/tvExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deseja_realmente_sair"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/viewContainer"
        app:layout_constraintEnd_toEndOf="@id/viewContainer"
        app:layout_constraintTop_toTopOf="@id/viewContainer"/>


    <Button
        android:id="@+id/btSair2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        android:textSize="20sp"
        style="@style/Widget.AppCompat.Button"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintStart_toStartOf="@id/tvExit"
        app:layout_constraintEnd_toEndOf="@id/tvExit"
        app:layout_constraintTop_toBottomOf="@id/tvExit"

        />

    <TextView
        android:id="@+id/tvNaoSair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_o_sair"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/btSair2"
        app:layout_constraintEnd_toEndOf="@id/btSair2"
        app:layout_constraintTop_toBottomOf="@id/btSair2"/>


</androidx.constraintlayout.widget.ConstraintLayout>