<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#933B3C"
    tools:context=".Features.ApenasViews.MenuDexFragment">


    <ImageView
        android:id="@+id/imgPokebola"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poke" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPokebola"
        tools:layout_editor_absoluteX="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgPokedex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Pink"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="@dimen/normalSize"
                android:layout_height="@dimen/normalSize"
                android:contentDescription="Pokedex"
                android:src="@drawable/pokemons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="Pokemon"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/imgDex2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/Pink"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="@dimen/normalSize"
                android:layout_height="@dimen/normalSize"
                android:src="@drawable/configuracao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/configuracao"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/imgDex3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/Pink"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="@dimen/normalSize"
                android:layout_height="@dimen/normalSize"
                android:src="@drawable/item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/item"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/imgDex4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="@color/Pink"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="@dimen/normalSize"
                android:layout_height="@dimen/normalSize"
                android:src="@drawable/lugar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/region"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/imgDex7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="420dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/Pink"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="@dimen/normalSize"
                android:layout_height="@dimen/normalSize"
                android:src="@drawable/game" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/game"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/imgDex8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/Pink"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="@dimen/normalSize"
                android:layout_height="@dimen/normalSize"
                android:src="@drawable/encontros" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/encounters"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>